--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,127 +1,275 @@
-/* 风格样式设置 */
-
 /* 字体设置 */
-.zh-title {
-	font-size: 18px;
-	font-weight: 700;
-	color: rgba(0, 0, 0, , 0.8);
+p {
+	font-size: 15px;
+	line-height: 50px;
+	color: #333333;
 }
 
-.zh-sub-title {
-	font-style: 16px;
-	font-weight: 500;
-	color: rgba(0, 0, 0, , 0.7);
+.title {
+	font-size: 16px;
+	font-weight: 600;
+	color: rgba(0, 0, 0, 0.7);
 }
 
-.zh-meta {
-	font-style: 12px;
-	color: #b4b4b4;
+.sub-title {
+	font-size: 15px;
+	color: rgba(0, 0, 0, 0.6);
+	letter-spacing: 0.2px;
 }
 
-/*--------主题设置-------*/
-.zh-primary-theme {
+.meta {
+	font-size: 10px;
+	letter-spacing: 2px;
+}
+
+/* ---------主题设置----------- */
+.primary-fill {
 	background-color: #009688;
 	color: #fff;
 }
 
-.zh-warning-theme {
+.primary-border {
+	border: 1px solid #009688;
+	color: #009688;
+}
+
+.warning-fill {
 	background-color: #fb8c00;
 	color: #fff;
 }
 
-.zh-success-theme {
+.warning-border {
+	border: 1px solid #fb8c00;
+	color: #fb8c00;
+}
+
+.success-fill {
 	background-color: #4caf50;
 	color: #fff;
 }
 
-.zh-disable-theme {
+.success-border {
+	border: 1px solid #4caf50;
+	color: #4caf50;
+}
+
+.disable-fill {
 	background-color: #e0e0e0;
 	color: #fff;
 }
 
-/*---------按钮设置--------*/
-.zh-btn {
+.disable-border {
+	border: 1px solid #e0e0e0;
+	color: #e0e0e0;
+}
+
+.dark-fill {
+	background-color: #444444;	
+	color: #AAAAAA;
+}
+
+.dark-border {
+	border: 1px solid #555555;
+	color: #555555;
+}
+
+/* --------------按钮设置------------ */
+.btn {
 	border: none;
 	cursor: pointer;
-	margin: 5px;
 }
 
-.zh-btn-round {
-	border-radius: 20px;
+.btn-lg {
+	width: 80px;
+	height: 30px;
 }
 
-.zh-btn-circle {
-	width: 100px;
-	height: 100px;
+.btn-rd {
+	border-radius: 30px;
+}
+
+
+
+.btn-circle {
+	width: 60px;
+	height: 60px;
 	border-radius: 50%;
 }
 
-.zb-btn-normal {
-	width: 120px;
-	height: 35px;
-}
-
-.zh-btn-large {
-	width: 140px;
-	height: 45px;
-}
-
 /* 表单元素样式 */
-.zh-input-box {
+.input-box {
 	display: block;
-	border: 1px solid #eee;
+	width: 90%;
+	border: 1px solid darkcyan;
 	border-radius: 5px;
-	height: 35px;
+	height: 40px;
+	margin-bottom: 20px;
 }
 
 /* 阴影样式 */
-
-.zh-shadow {
+.shadow {
 	box-shadow: 2px 5px 10px #aaa;
-
 }
 
 /* 头像样式 */
-.zh-avatar {
+.avatar-xs {
+	display: inline-block;
 	width: 35px;
 	height: 35px;
 	border-radius: 50%;
 }
 
-/* 导航条设置 */
-.zh-nav {
-	height: 70px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 999;
-	/* background-color: #009688; */
-}
-
-.zh-nav-bar {
-	width: 85%;
-	margin: 0 auto;
-}
-
-/* 导航 */
-.zh-list {
+.avatar-lg {
 	display: inline-block;
+	width: 55px;
+	height: 55px;
+	border-radius: 50%;
+}
+
+.avatar-xs,
+.avatar-lg:hover {
+	cursor: pointer;
+}
+
+/* 图片缩略样式 */
+.thumnail-xs {
+	width: 150px;
+	height: 150px;
+	border-radius: 10px;
+}
+
+.thumnail-lg {
+	width: 200px;
+	height: 200px;
+	border-radius: 10px;
+}
+
+/* 导航条 */
+.nav {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	z-index: 999;
+	background-color: #2C3E50;
+}
+
+.nav-bar {
+	width: 100%;
+	height: 70px;
+}
+
+.nav-list {
+	width: 80%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+}
+
+.nav-item {
+	height: 70px;
 	line-height: 70px;
 }
 
-.zh-list li {
+.nav-item input {
+	margin-top: 15px;
+	width: 200px;
+	height: 40px;
+	font-size: 15px;
+}
+
+.nav-item img {
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
+}
+
+.nav-item a {
 	display: inline-block;
-
+	width: 80px;
+	height: 35px;
+	margin-right: 5px;
+	font-size: 18px;
+	font-weight: 600;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 35px;
+	letter-spacing: 3px;
 }
 
-/* 超链接样式 */
-.zh-list li a {
-	color: #eee;
+.nav-right {
+	float: right;
 }
 
-/* 路由激活高亮样式 */
-.router-link-active {
-	color: #fff;
+/* 边框 */
+.border {
+	border: 1px solid #ddd;
+	border-radius: 5px;
+}
+
+/* 下边框 */
+.border-bottom {
+	border-bottom: 1px solid #ddd;
+	padding-bottom: 20px;
+}
+
+/* 文章样式 */
+.media-wraaper {
+	display: flex;
+	min-height: 120px;
+	height: 230px;
+	margin: 10px;
+	border-radius: 5px;
+	padding: 10px;
+}
+
+.media-left {
+	flex: 1 1 18%;
+	text-align: center;
+	margin-right: 15px;	
+}
+
+.media-middle {
+	flex: 1 1 60%;
+	margin-right: 20px;
+	margin-left: 20px;
+}
+
+.media-right {
+	flex: 1 1 20%;
+	height: 110%;
+	width: 100%;
+}
+
+.media-middle>a {
+	color:rgb(204, 255, 153);
+	font-size: 18px;
 	font-weight: 700;
+}
+
+.media-right img {
+	width: 95%;
+	height: 80%;
+	border-radius: 10px;
+}
+
+/* 卡片样式 */
+.card {
+	width: 100%;
+	height: 360px;
+	border: 1px solid #eee;
+	border-radius: 5px;
+	margin: 20px;
+	padding: 10px;
+}
+
+.card img {
+	border-radius: 60%;
+	width: 100%;
+	height: 70%;
+	/* border-top-left-radius: 5px;
+	border-bottom-right-radius: 5px; */
+}
+
+.card>p {
+	line-height: 20px;
 }
