--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -135,29 +135,37 @@ a:active {
 }
 
 .flex-center {
+	/* 	项目位于容器的中心。 */
 	justify-content: center;
 }
 
 .flex-between {
+	/* 	项目位于各行之间留有空白的容器内。 */
 	justify-content: space-between;
 }
 
 .flex-around {
+	/* justify-content用于设置或检索弹性盒子元素在主轴（横轴）方向上的对齐方式 */
+	/* 	项目位于各行之前、之间、之后都留有空白的容器内 */
 	justify-content: space-around;
 }
 
 .flex-left {
+	/* 默认值。项目位于容器的开头。 */
 	justify-content: flex-start;
 }
 
 .flex-right {
+	/* 	项目位于容器的结尾。 */
 	justify-content: flex-end;
 }
 
 
 
 .flex-center-y {
-	display: flex;
+	display: flex ;
+	/* flex-direction规定灵活项目的方向 */
+	/* 灵活的项目将垂直显示，正如一个列一样。 */
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
@@ -165,6 +173,7 @@ a:active {
 
 .flex-top-y {
 	display: flex;
+	/* 规定灵活的项目在必要的时候拆行或拆列。 */
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-content: space-between;
@@ -255,10 +264,12 @@ a:active {
 
 /* 链接样式 */
 .link {
+	/* 光标呈现为指示链接的指针（一只手） */
 	cursor: pointer;
 }
 
 /* 间距 */
 .gutter {
-	margin-right: 10px;
+	/* 设置元素的右边距 */
+	margin-right: 20px;
 }
