--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -224,7 +224,7 @@ p {
 	height: 230px;
 	margin: 15px;
 	border-radius: 5px;
-	padding: 10px;
+	padding: 5px;
 }
 
 .media-left {
@@ -241,7 +241,7 @@ p {
 }
 
 .media-right {
-	flex: 1 1 20%;
+	flex: 1 1 18%;
 	height: 110%;
 	width: 100%;
 }
@@ -253,9 +253,8 @@ p {
 }
 
 .media-right img {
-	width: 95%;
-	height: 80%;
-	border-radius: 10px;
+	width: 200px;
+	height: 220px;
 }
 
 /* 卡片样式 */
@@ -272,9 +271,9 @@ p {
 }
 
 .card img {
-	border-radius: 60%;
+	border-radius: 5%;
 	width: 100%;
-	height: 70%;
+	height: 72%;
 	/* border-top-left-radius: 5px;
 	border-bottom-right-radius: 5px; */
 }
